[tool.poetry]
name = "workout-tracker"
version = "0.1.0"
description = ""
authors = ["Metin100 <9455@holbertonstudents.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.6"}
sqlmodel = "^0.0.22"
pymysql = "^1.1.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
jwt = "^1.3.1"
pyjwt = "^2.10.1"
httpx = "^0.28.1"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
